<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meet Everywhere</string>
    <string name="visibility_all">Visible For Others</string>
    <string name="visibility_friends">Visible for friends</string>
    <string name="close">Close</string>
    <string name="minimize">Hide</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_meet_everywhere">Meet Everywhere!</string>
    <string name="gps">GPS Sensor</string>
    <string name="gsm">GSM Base Stations</string>
    <string name="gps_gsm">Both</string>
    <string name="trackingChoice">Tracking Method:</string>
    <string name="initialUserDiscription">Put your discription here</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_details">ProfileDetails</string>
    <string name="tags_edition_text">Wpisz tagi oddzielone przecinkiem</string>
    <string name="tag_add_text">Add</string>
    <string name="tag_cancel_text">Back</string>
    <string name="tag_save_text">Save</string>
    <string name="error_tags_required">This field is required</string>
    <string name="tag_delete_text">Delete</string>
    <string name="desc">Photo</string>
    <string name="tag_search_text">Search</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Common strings *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="user_name">Nick uzytkownika</string>
    <string name="user_description">Opis uzytkownika</string>
    <string name="put_your_name_hint">Put your name</string>
    <string name="put_your_description_hint">Write your description (optional)</string>
    <string name="ActivityLogin.login">Login</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Profile Edition *************************************** -->
    <!-- ************************************************************************************************* -->


    <!-- ************************************************************************************************* -->
    <!-- ************************************* Profile Details *************************************** -->
    <!-- ************************************************************************************************* -->


    <!-- ************************************************************************************************* -->
    <!-- ************************************* User Registration *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="attach_picture">Attach picture</string>
    <string name="UserRegistration.put_picture_label">Choose your profile picture (optional)</string>
    <string name="UserRegistration.register">Register</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Bluetooth *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="insert_message_text">Wpisz tekst</string>
    <string name="insert_message_hint">Podaj treść wiadomości</string>
    <string name="send_button">Wyślij</string>
    <string name="title_activity_found_tags">FoundTagsActivity</string>

</resources>