<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:id="@+id/tags_view">

    <ListView
        android:id="@+id/tagsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        

    </ListView>
    
     <EditText
        android:id="@+id/tagsTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags_edition_text"
        android:inputType="text">
    </EditText>
    
   
      <Button
        android:id="@+id/tagAddingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_add_text" 
        android:onClick="addTags"/>
      
      <Button
        android:id="@+id/tagDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_delete_text" 
        android:onClick="deleteTags"/>

    <Button
        android:id="@+id/tagSavingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_search_text"
        android:onClick="searchTags"/>

   
    
     <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="backToMainMenu"
        android:text="@string/tag_cancel_text" />

    
    
   

</LinearLayout>
